[package]
name = "copilotha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
garde = "0.16.3"
once_cell = "1.19.0"
toml = "0.8.8"
dirs = "5.0.1"
tracing = "0.1.40"
rand = "0.8.5"
anyhow = "1.0.82"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
thiserror = "1.0.59"
